--- a/index.html
+++ b/index.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-	<head>
-		<meta charset="UTF-8">
-    	<title>Barberaria Alura</title>
-	</head>
-	<body>
-		<h1 style="text-align: center">Sobre a Barbearia Alura</h1>
+Sobre a Barbearia Alura
 
-		<p style="text-align: center">Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
 
-		<p style="font-size: 20px; text-align: center" ><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
 
-		<p style="text-align: center">Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes</p>
-	</body>
-
-</html.>
+Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes
