--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-Sobre a Barbearia Alura
+<DOCTAYPE>
 
-Localizada no coração da cidade a Barbearia Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.
+<h1>SOBRE A BARBEARIA ALURA</h1>
 
-Nossa missão é: "Proporcionar auto-estima e qualidade de vida aos clientes".
+<p>Localização no coraçaão da cidade a <strong>Barbearia Alura</strong> traz para mo mercado o que há de melhor para o seu cabelo  e braba.
+Fundada em 2019, a Barberia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes
+<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+
+<p> profissionais experientes e atenados às mudanças no mundo da moda.
+O atendimento possui padrãp de exelência e agilidade, garantindo qualidade e satisfação dos clientes </p>
