--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
-<DOCTAYPE>
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8">
+        <title>Barbearia Alura</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 
-<h1>SOBRE A BARBEARIA ALURA</h1>
+    <body>
+        <img id="banner" src="banner.jpg">
 
-<p>Localização no coraçaão da cidade a <strong>Barbearia Alura</strong> traz para mo mercado o que há de melhor para o seu cabelo  e braba.
-Fundada em 2019, a Barberia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <h1>Sobre a Barbearia Alura</h1>
 
-<p><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. 
+        Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-<p> profissionais experientes e atenados às mudanças no mundo da moda.
-O atendimento possui padrãp de exelência e agilidade, garantindo qualidade e satisfação dos clientes </p>
+        <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+        
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
+        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </body>
+</html>
